<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img_1"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="350dp"
        android:layout_marginStart="60dp"
        android:textColor="@color/white"
        android:text="@string/sing_in"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:helperText="*Required"
        app:helperTextTextColor="#FF0000"
        android:layout_margin="30sp"
        app:startIconDrawable="@drawable/baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:hint="@string/enter_user_name" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:helperText="*Required"
        app:helperTextTextColor="@color/black"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_background"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <View
            android:id="@+id/view"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/black" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_margin="16dp"
            android:text="@string/or" />

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutToOpenSignUpActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:layout_marginStart="40sp"
        android:layout_marginEnd="40sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewForSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:text="@string/don_t_have_an_account_signup"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15sp"
        android:background="@drawable/button_background"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />


</LinearLayout>