<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@drawable/img_2"
    tools:context=".SignUpActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="150sp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="30sp"
        android:text="@string/sign_up" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30sp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            app:helperText="*Required"
            app:helperTextTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextForFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background"
                android:hint="@string/first_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            app:helperText="*Required"
            app:helperTextTextColor="@color/black"
            android:layout_marginStart="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextForLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background"
                android:hint="@string/last_name" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="30sp"
        android:layout_marginEnd="30sp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:helperText="*Required"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background"
                android:hint="@string/enter_user_name2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/baseline_lock_24"
            app:helperText="*Required"
            app:helperTextTextColor="@color/black"
            app:endIconMode="password_toggle"
            android:layout_marginTop="50sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background"
                android:inputType="textPassword"
                android:hint="@string/enter_password2" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:helperText="*Required"
            app:helperTextTextColor="@color/black"
            app:startIconDrawable="@drawable/baseline_mail_outline_24"
            android:layout_marginTop="50sp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/grey_background"
                android:inputType="textEmailAddress"
                android:hint="@string/enter_email_id" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonForSignUp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40sp"
        android:background="@drawable/button_background"
        android:text="@string/signup"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewToShowName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:text="" />


</LinearLayout>